--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -446,9 +446,9 @@ header .header-image img {
   }
 
 .main {
-  -webkit-order: 2;
+/*  -webkit-order: 2;
   -ms-order: 2;
-  order: 2;
+  order: 2; */
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -692,14 +692,14 @@ nav > ul {
   list-style: none;
   margin: 2em 0 0;
   padding-top: 0;
-background: #666666; /* Old browsers */
-background: -moz-linear-gradient(top,  #666666 0%, #4f4f4f 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#666666), color-stop(100%,#4f4f4f)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #666666 0%,#4f4f4f 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#4f4f4f',GradientType=0 ); /* IE6-9 */
+  background: #666666; /* Old browsers */
+  background: -moz-linear-gradient(top,  #666666 0%, #4f4f4f 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#666666), color-stop(100%,#4f4f4f)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #666666 0%,#4f4f4f 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#4f4f4f',GradientType=0 ); /* IE6-9 */
   }
 
 nav > ul > li {
@@ -735,7 +735,7 @@ nav > ul > li > a:hover {
   background: linear-gradient(to bottom,  #3f3f3f 0%,#202020 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f3f3f', endColorstr='#202020',GradientType=0 ); /* IE6-9 */
   color: #fff;
-      }
+  }
 
 nav > ul > li > ul {
   display: -ms-flexbox;
@@ -807,7 +807,142 @@ nav > ul > li:hover ul {
 /*----------------------------------------------------
 Wide Style
 -------------------------------------------------------*/
+@media only screen and (min-width: 800px) {
 
+.menu-link {
+  display: none;
+  }
+
+/*----------------------------------------------------
+Set first level order
+-------------------------------------------------------*/
+
+nav {
+  -webkit-box-ordinal-group: 1;
+  -moz-box-ordinal-group: 1;
+  -ms-flex-order: 1;
+  -webkit-order: 1;
+  order: 1;
+  }
+
+header {
+  -webkit-box-ordinal-group: 2;
+  -moz-box-ordinal-group: 2;
+  -ms-flex-order: 2;
+  -webkit-order: 2;
+  order: 2;
+  }
+
+.main {
+  -webkit-box-ordinal-group: 3;
+  -moz-box-ordinal-group: 3;
+  -ms-flex-order: 3;
+  -webkit-order: 3;
+  order: 3;
+  }
+
+footer {
+  -webkit-box-ordinal-group: 4;
+  -moz-box-ordinal-group: 4;
+  -ms-flex-order: 4;
+  -webkit-order: 4;
+  order: 4;
+  }
+
+/*----------------------------------------------------
+   Navigation
+-------------------------------------------------------*/
+
+nav > ul {
+  -ms-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background: #1d2644;
+  margin: 0;
+  padding-top: 0;
+  }
+
+nav > ul > li > a:hover {
+  background: #eacf6e; /* Old browsers */
+  background: -moz-linear-gradient(top,  #eacf6e 1%, #b78d03 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#eacf6e), color-stop(100%,#b78d03)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #eacf6e 1%,#b78d03 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eacf6e', endColorstr='#b78d03',GradientType=0 ); /* IE6-9 */
+  color: #fff;
+  }
+
+nav > ul > li > ul {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  list-style: none;
+  margin: 0 0 0 1em;
+  display: none;
+  width: 200px;
+  position: absolute;
+  background: #1d2644;
+  border-left: 1px solid #000;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;
+  -webkit-box-shadow: 7px 7px 15px 0px rgba(66,66,66,0.5);
+  -moz-box-shadow: 7px 7px 15px 0px rgba(66,66,66,0.5);
+  box-shadow: 7px 7px 15px 0px rgba(66,66,66,0.5);
+  }
+
+nav > ul > li > ul > li > a:hover {
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  background: #eacf6e; /* Old browsers */
+  background: -moz-linear-gradient(top,  #eacf6e 1%, #b78d03 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#eacf6e), color-stop(100%,#b78d03)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #eacf6e 1%,#b78d03 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eacf6e', endColorstr='#b78d03',GradientType=0 ); /* IE6-9 */
+  color: #fff;
+  }
+
+/*----------------------------------------------------
+Formatting Wide Screen
+-------------------------------------------------------*/
+
+header {
+  padding-top: 0;
+  }
+
+.main {
+  -ms-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-pack: space-between;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  width: 85%;
+  margin: 0 auto 2em;
+  }
+
+.main article {
+  width: 70%;
+  padding-right: 2em;
+  }
+
+.main aside {
+  width: 30%;
+  padding-left: 2em;
+  border-left: 1px solid #ddd;
+  }
+
+}
 
 /*----------------------------------------------------
 Wide Style
