updates for mobile-first

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,6 @@
 <div class="logo">
   <%= link_to image_tag("nose_art.png", :alt => "Devil Dog Squadron"), "/" %>
 </div>
-<div class="header-image">
+<div class="header-image hero">
   <%= image_tag("headers/" + random_image) %>
 </div>
