--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -15,14 +15,21 @@
   <%= render 'layouts/header' %>
 </header>
 
-
 <nav>
     <%= render 'layouts/nav' %>
 </nav>
 
 
 <div class="main">
-  <%= yield %>
+
+  <% if notice %>
+    <p id="notice"><%= notice %></p>
+  <% end %>
+  
+  <article>
+    <%= yield %>
+  </article>
+
 </div>
 
 <footer>
