--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -405,21 +405,6 @@ Formatting Small Screen
   background: #fff;
   }
 
-nav#top-nav ul {
-  margin-top: -60px;
-  list-style: none;
-  margin: 0 0 1em 0;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: column;
-  -ms-flex-flow: column;
-  flex-flow: column;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  }
-
 header {
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -707,16 +692,16 @@ nav > ul > li {
   margin: 0;
   padding: 0;
   position: relative;
+  font-size: 1.5em;
   transition: all linear 0.1s;
   border-bottom: 1px solid #000;
   }
 
-nav > ul > li > a {
+nav > ul > li > a:link {
   display: block;
   padding: 0.5em 1em;
   cursor: pointer;
   color: #fff;
-  font-size: 1.25em;
   text-decoration: none;
   z-index: 2;
   }
@@ -768,17 +753,27 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', end
 
 nav > ul > li > ul > li {
   margin: 0;
+background: #666666; /* Old browsers */
+background: -moz-linear-gradient(top,  #666666 0%, #4f4f4f 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#666666), color-stop(100%,#4f4f4f)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #666666 0%,#4f4f4f 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#4f4f4f',GradientType=0 ); /* IE6-9 */
+ 
   }
 
-nav > ul > li > ul > li > a {
+nav > ul > li > ul > li > a:link {
   flex: 0 1 auto;
   padding: 0.5em 1em;
+  margin: 0;
   cursor: pointer;
   display: block;
   color: #fff;
   text-decoration: none;
-  border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
+  border-top: 1px solid #000000;
+  border-bottom: 1px solid #000000;
   }
 
 nav > ul > li > ul > li > a:visited {
@@ -786,6 +781,7 @@ nav > ul > li > ul > li > a:visited {
   }
 
 nav > ul > li > ul > li > a:hover {
+  color: #fff;
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
   background: #3f3f3f; /* Old browsers */
@@ -796,7 +792,6 @@ nav > ul > li > ul > li > a:hover {
   background: -ms-linear-gradient(top,  #3f3f3f 0%,#202020 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #3f3f3f 0%,#202020 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f3f3f', endColorstr='#202020',GradientType=0 ); /* IE6-9 */
-  color: #fff;
   }
 
 nav > ul > li:hover ul {
@@ -854,6 +849,8 @@ footer {
 -------------------------------------------------------*/
 
 nav > ul {
+  position: fixed;
+  width: 100%;
   -ms-flex-direction: row;
   -webkit-flex-direction: row;
   flex-direction: row;
@@ -920,6 +917,10 @@ header {
   padding-top: 0;
   }
 
+.hero img {
+  width: 1626px;
+}
+
 .main {
   -ms-flex-direction: row;
   -webkit-flex-direction: row;
@@ -940,6 +941,46 @@ header {
   width: 30%;
   padding-left: 2em;
   border-left: 1px solid #ddd;
+  }
+
+/*----------------------------------------------------
+   Homepage boxes ordering
+-------------------------------------------------------*/
+
+.about {
+  -webkit-order: 1;
+  -ms-order: 1;
+  order: 1;
+  }
+
+.updates {
+  -webkit-order: 2;
+  -ms-order: 2;
+  order: 2;
+  }
+
+.calendar {
+  -webkit-order: 4;
+  -ms-order: 4;
+  order: 4;
+  }
+
+.feed {
+  -webkit-order: 3;
+  -ms-order: 3;
+  order: 3;
+  }
+
+.sponsors {
+  -webkit-order: 5;
+  -ms-order: 5;
+  order: 5;
+  }
+
+.galleries {
+  -webkit-order: 6;
+  -ms-order: 6;
+  order: 6;
   }
 
 }
