adding papertrail for auditing/versioning models

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -37,6 +37,7 @@
 </div>
 </div>
 
+<%= render 'versions', :member => @member %>
 
 <%= link_to 'Edit', edit_member_path(@member) %> |
 <%= link_to 'Back', members_path %>
