updated membership page

--- a/app/views/sidebars/_members.html.erb
+++ b/app/views/sidebars/_members.html.erb
@@ -9,6 +9,6 @@
   <li><%= link_to "Account/Profile", account_path(current_user.member.id) %></li>
   <li><%= link_to 'Password', edit_user_registration_path %></li>
 </ul>
-<p><%= link_to "Renew Membership Online", product_path(:id => 15) %></p>
+<p><%= link_to "Renew Membership Online", membership_path %></p>
 <!-- Close right-column-box -->
 </div>
