updates to membership page

--- a/app/views/pages/membership.html.erb
+++ b/app/views/pages/membership.html.erb
@@ -1,4 +1,12 @@
-<h1>Submit Membership Online</h1>
+<h1>Membership Online Payment</h1>
+
+<p>Choose the level of membership you would like to participate at below and click the "Add To Cart" button. You will be redirected to Paypal our payment processor.</p>
+
+<p>If you prefer to mail a check, make your check payable to Devil Dog Squadron and mail to:<br />
+<div style="margin-left: 2em;">Devil Dog Squadron<br />
+c/o Pilot's Choice Aviation<br />
+209 Corsair Drive<br />
+Georgetown, TX 78628</div></p>
 
 <table width="560" class="table2">
   <tr>
@@ -63,3 +71,11 @@
   </tr>
 <% end %>
 </table>
+
+<h2>Aircraft Sponsor</h2>
+
+<p>The highest level of aircraft support is the Aircraft Sponsor, who for a donation of $3,500 becomes a full sponsor of the aircraft and is eligible for selection as a pilot in command or other flight crew member, if they is qualified.</p>
+
+<p>Many non-pilots choose to become Aircraft Sponsors to express their support of the  aircraft, realizing the expense of keeping them flying.</p>
+
+<p>To learn more about becoming an Aircraft Sponsor of the Devil Dog contact us at <a href="mailto:info@devildogsquadron.com">info@devildogsquadron.com</a>. </p>
